--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <ul>
             <li><a href="#">사장입니다.</a></li>
         </ul>
+        <ul>
+            <li><a href="#">신입입니다.</a></li>
+        </ul>
     </div>
 </body>
 </html>
